--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ a {
 
 .inline-list li { /* any li inside the .inline-list */
   display: inline-block;
+  
 }
 
 .unmargin {
@@ -143,6 +144,9 @@ a {
 
 /* TODO 3 */
 .main-block {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
   /* Restrict the maximum width of the .main-block to 1200px,
   then ensure that block is centered within the layout */
   /* Hint: how do you center a block element? */
@@ -172,14 +176,13 @@ a {
 }
 
 .lessons-grid {
-  margin: 1em 0;
+ margin: 0 0;
 }
 
 .lesson {
   background-color: #fff;
   border: 1px solid #ddd;
   padding: 0 1em;
-  margin: 1em 0;
 }
 
 .article-img {
@@ -210,8 +213,12 @@ a {
     margin: 0 auto;
   }
 
+
   .lessons-grid {
     display: grid;
+    grid-column: 1fr, 1fr;
+    grid-gap: 1em;
+
     /* TODO 1 */
     /* 2 column template! (1 fraction each) */
     /* Use this as a reminder of the syntax:
@@ -242,11 +249,30 @@ a {
 
   .main-block {
     width: 880px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 
   .lessons-grid {
+    display: grid;
+    grid-column: 1fr 1fr 1fr 1fr;
     /* TODO 2 */
     /* 4 column template! (1 fraction each) */
+  }
+
+   .main-header {
+    grid-column: 1 / 3;
+  }
+  #lessons {
+    grid-column: 1 / 3;
+  }
+
+  #grading {
+    grid-column: 1 / 2;
+  }
+
+  #topics {
+    grid-column: 2 / 3;
   }
 
   /* TODO 4 */
